--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  width: 100%;
+ height: auto;
 }
 
 .carousel-item {
