--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-
+/* 
 body {
   display : flex;
   justify-content: center;
@@ -48,4 +48,64 @@ button {
 
 button:hover {
   background-color: #0056b3;
+} */
+
+html {
+  font-size: 200%;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.carousel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 1000;
+}
+
+.carousel-item {
+  flex: 0 0 auto;
+  margin: 0 10px;
+  border: 2px solid green;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  transition: transform 0.5s ease;
+}
+
+.carousel-item img {
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+.carousel-item h3 {
+  font-family: 'Arial, sans-serif';
+  font-size: 2.4em;
+  color: #333;
+}
+
+button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 0 10px;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
