--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #535bf2;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 h1 {
